k8s/traefik/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: personal-cinema
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
        - name: traefik
          image: traefik:v2.4
          args:
            - "--api.insecure=true"
            - "--api.dashboard=true"
            - "--providers.kubernetescrd"
            - "--entrypoints.web.address=:80"
            - "--entrypoints.websecure.address=:443"
            - "--certificatesresolvers.letsencrypt.acme.email=dominikfurst1@seznam.cz"
            - "--certificatesresolvers.letsencrypt.acme.storage=/acme.json"
            - "--certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web"
          ports:
            - containerPort: 80
              name: web
            - containerPort: 443
              name: websecure
          volumeMounts:
            - name: traefik-storage
              mountPath: /acme.json
  volumes:
    - name: traefik-storage
      persistentVolumeClaim:
        claimName: traefik-storage-pvc
