k8s/traefik/service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: personal-cinema
spec:
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
    - protocol: TCP
      port: 443
      targetPort: 443
