k8s/traefik/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-cinema-ingress
  namespace: personal-cinema
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - admin.soukromekino.cz
        - api.soukromekino.cz
        - file.soukromekino.cz
        - admin.file.soukromekino.cz
      secretName: personal-cinema-tls
  rules:
    - host: admin.soukromekino.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-frontend
                port:
                  number: 80
    - host: api.soukromekino.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
    - host: file.soukromekino.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
    - host: admin.file.soukromekino.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
